--- a/child/pom.xml
+++ b/child/pom.xml
@@ -15,6 +15,7 @@
         <maven.compiler.release>11</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <quarkus.package.type>uber-jar</quarkus.package.type>
     </properties>
 
 </project>
