--- a/child/src/main/resources/application.properties
+++ b/child/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 #quarkus.generate-code.grpc.descriptor-set.generate=true
 quarkus.generate-code.grpc.scan-for-imports=all
 quarkus.grpc.server.use-separate-server=false
+quarkus.grpc.server.enable-reflection-service=true
+quarkus.package.type=uber-jar
