update inmemory consumer testing, sonarlint plugin added

--- a/child/src/main/resources/application.properties
+++ b/child/src/main/resources/application.properties
@@ -1,5 +1,34 @@
+quarkus.devservices.enabled=false
+
 #quarkus.generate-code.grpc.descriptor-set.generate=true
-quarkus.generate-code.grpc.scan-for-imports=all
-quarkus.grpc.server.use-separate-server=false
-quarkus.grpc.server.enable-reflection-service=true
-quarkus.package.type=uber-jar
+quarkus.generate-code.grpc.scan-for-imports= all
+quarkus.grpc.server.use-separate-server= false
+quarkus.grpc.server.enable-reflection-service= true
+quarkus.package.type= uber-jar
+
+quarkus.datasource.db-kind= h2
+quarkus.datasource.jdbc.url= jdbc:h2:mem:db
+quarkus.datasource.jdbc.driver= org.h2.Driver
+quarkus.hibernate-orm.database.generation= create
+quarkus.hibernate-orm.dialect= org.hibernate.dialect.H2Dialect
+quarkus.hibernate-orm.sql-load-script= META-INF/import.sql
+quarkus.hibernate-orm.log.sql= true
+
+%test.quarkus.datasource.db-kind= h2
+%test.quarkus.datasource.jdbc.url= jdbc:h2:mem:test
+%test.quarkus.datasource.jdbc.driver= org.h2.Driver
+%test.quarkus.hibernate-orm.database.generation= drop-and-create
+%test.quarkus.hibernate-orm.dialect= org.hibernate.dialect.H2Dialect
+%test.quarkus.hibernate-orm.sql-load-script= META-INF/import.sql
+%test.quarkus.hibernate-orm.log.sql= true
+%test.quarkus.http.port=9090
+
+mp.messaging.outgoing.persons-out.topic=persons
+mp.messaging.incomming.persons-in.topic=persons
+
+mp.messaging.outgoing.persons-out.connector=smallrye-kafka
+mp.messaging.incomming.persons-in.connector=smallrye-kafka
+
+mp.messaging.outgoing.persons-out2.topic=persons-test
+mp.messaging.outgoing.persons-out2.connector=smallrye-kafka
+mp.messaging.outgoing.persons-out2.merge=true
